<resources>
    <string name="app_name">GreenBeans</string>
    <string name="mealTitle">Title of Meal</string>
    <string name="mealDescription">Description of meal</string>
    <string name="minutes">minutes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">search</string>
    <string name="home">Home</string>
    <string name="checkout">Checkout</string>
    <string name="equipment">Equipment</string>
    <string name="skills">Skills</string>
    <string name="cancel">Cancel Meal</string>
    <string name="ingredients">Ingredients</string>
    <string name="start_meal">Start Meal</string>
    <string name="toolbar">Toolbar</string>
    <string name="add_to_meal">Add to Meal</string>
    <string name="meal_image">meal image</string>
    <string name="previous">Previous:</string>
    <string name="current">Current:</string>
    <string name="next">Next:</string>
</resources>
