<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.blake.greenbeans.MainActivity"
    android:fillViewport="false">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/toolbar"
        android:background="@color/GreenBean"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:isScrollContainer="true"
            android:id="@+id/RelativeLayout">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/meal"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="12dp"
                android:isScrollContainer="false">

            </ListView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:id="@+id/ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginTop="3sp"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_below="@+id/meal"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ingredientList"
                android:layout_below="@+id/ingredients"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:isScrollContainer="false">

            </ListView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skills"
                android:id="@+id/skill"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginTop="3sp"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_below="@+id/ingredientList"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/skillsList"
                android:layout_below="@+id/skill"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:isScrollContainer="false">

            </ListView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equipment"
                android:id="@+id/equipment"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginTop="3sp"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_below="@+id/skillsList"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/equipmentList"
                android:layout_below="@+id/equipment"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:isScrollContainer="false">

            </ListView>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:text="@string/start_meal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCheckout"
        style="@style/Widget.AppCompat.Button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp" />

</RelativeLayout>